--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -1,3 +1,7 @@
+body {
+  font-size: var(--font-size-normal);
+}
+
 .nav-file-title,
 .nav-folder-title {
   border: 1px solid transparent;
